tests = {
    'arch_flags': {},
    'blk_include': {},
    'blk_nblock': {},
    'blk_non_zero': {},
    'blk_pool': {},
    'blk_pool_lock': {},
    'blk_pool_win': {
        'properties': [ 'windows_only' ],
    },
    'blk_recovery': {},
    'blk_rw': {},
    'blk_rw_mt': {},
    'bttdevice': {
        'properties': [ 'no_sources', ],
    },
    'checksum': {},
    'compat_incompat_features': {},
    'ctl_cow': {},
    'ctl_prefault': {},
    'daxio': {
        'properties': [ 'no_sources' ],
    },
#     'ex_libpmem': {},
#     'ex_libpmem2': {},
#     'ex_libpmemblk': {},
#     'ex_libpmemlog': {},
#     'ex_libpmemobj': {},
#     'ex_libpmemset': {},
#     'ex_librpmem_basic': {},
#     'ex_librpmem_fibonacci': {},
#     'ex_librpmem_hello': {},
#     'ex_librpmem_manpage': {},
#     'ex_linkedlist': {},
#     'ex_pmreorder': {},
    'getopt': {},
    'libpmempool_api': {},
    'libpmempool_api_win': {
        'properties': [ 'windows_only' ],
    },
    'libpmempool_backup': {
        'test_deps': [ 'libpmempool_api' ],
        'properties': [ 'no_sources' ],
    },
    'libpmempool_bttdev': {
        'test_deps': [ 'libpmempool_api' ],
        'properties': [ 'no_sources' ],
    },
    'libpmempool_check_version': {},
    'libpmempool_feature': {},
    'libpmempool_include': {},
    'libpmempool_map_flog': {
        'test_deps': [ 'libpmempool_api' ],
        'properties': [ 'no_sources' ],
    },
    'libpmempool_rm': {},
    'libpmempool_rm_remote': {
        'test_deps': [ 'libpmempool_rm' ],
        'properties': [ 'no_sources' ],
    },
    'libpmempool_rm_win': {
        'properties': [ 'windows_only' ],
    },
    'libpmempool_sync': {},
    'libpmempool_sync_win': {
        'properties': [ 'windows_only' ],
    },
    'libpmempool_transform': {},
    'libpmempool_transform_win': {
        'properties': [ 'windows_only' ],
    },
    'log_basic': {},
    'log_include': {},
    'log_pool': {},
    'log_pool_lock': {},
    'log_pool_win': {
        'properties': [ 'windows_only' ],
    },
    'log_recovery': {},
    'log_walker': {},
    'magic': {
        'properties': [ 'no_sources' ],
    },
    'mmap': {},
    'mmap_fixed': {},
    'obj_action': {},
    'obj_alloc': {},
    'obj_badblock': {},
    'obj_basic_integration': {},
    'obj_bucket': {},
    'obj_check': {},
    'obj_check_remote': {},
    'obj_constructor': {},
    'obj_critnib': {},
    'obj_critnib_mt': {},
    'obj_ctl_alignment': {},
    'obj_ctl_alloc_class': {},
    'obj_ctl_alloc_class_config': {},
    'obj_ctl_arenas': {},
    'obj_ctl_config': {},
    'obj_ctl_debug': {},
    'obj_ctl_heap_size': {},
    'obj_ctl_stats': {},
    'obj_debug': {},
    'obj_defrag': {},
    'obj_defrag_advanced': {},
    'obj_direct': {},
    'obj_direct_volatile': {},
    'obj_extend': {},
    'obj_first_next': {},
    'obj_fragmentation': {},
    'obj_fragmentation2': {},
    'obj_heap': {},
#     'obj_heap_interrupt': {},
    'obj_heap_state': {},
    'obj_include': {},
    'obj_lane': {},
    'obj_layout': {},
#     'obj_list': {},
#     'obj_list_insert': {
#         'test_deps': [ 'obj_list' ],
#     },
    'obj_list_macro': {},
#     'obj_list_move': {
#         'test_deps': [ 'obj_list' ],
#     },
#     'obj_list_recovery': {
#         'test_deps': [ 'obj_list' ],
#     },
#     'obj_list_remove': {
#         'test_deps': [ 'obj_list' ],
#     },
#     'obj_list_valgrind': {
#         'test_deps': [ 'obj_list' ],
#     },
    'obj_locks': {},
    'obj_many_size_allocs': {},
    'obj_mem': {},
    'obj_memblock': {},
    'obj_memcheck': {},
    'obj_memcheck_register': {},
    'obj_memops': {},
    'obj_oid_thread': {},
    'obj_out_of_memory': {},
#     'obj_persist_count': {},
    'obj_pmalloc_basic': {},
    'obj_pmalloc_mt': {},
    'obj_pmalloc_oom_mt': {},
    'obj_pmalloc_rand_mt': {},
    'obj_pmemcheck': {},
    'obj_pool': {},
    'obj_pool_lock': {},
    'obj_pool_lookup': {},
#     'obj_pool_open_mt': {},
    'obj_pool_win': {
        'properties': [ 'windows_only' ],
    },
    'obj_realloc': {},
    'obj_recovery': {},
    'obj_recreate': {},
    'obj_reorder_basic': {},
    'obj_root': {},
    'obj_rpmem_basic_integration': {
        'test_deps': [ 'obj_basic_integration' ],
        'properties': [ 'no_sources' ],
    },
    'obj_rpmem_heap_interrupt': {
        'test_deps': [ 'obj_heap_interrupt' ],
        'properties': [ 'no_sources' ],
    },
    'obj_rpmem_heap_state': {
        'test_deps': [ 'obj_heap_state' ],
        'properties': [ 'no_sources' ],
    },
    'obj_sds': {},
    'obj_strdup': {},
#     'obj_sync': {},
    'obj_toid': {},
    'obj_tx_add_range': {},
    'obj_tx_add_range_direct': {},
    'obj_tx_alloc': {},
    'obj_tx_callbacks': {},
    'obj_tx_flow': {},
    'obj_tx_free': {},
    'obj_tx_invalid': {},
    'obj_tx_lock': {},
    'obj_tx_locks': {},
    'obj_tx_locks_abort': {},
    'obj_tx_mt': {},
    'obj_tx_realloc': {},
    'obj_tx_strdup': {},
    'obj_tx_user_data': {},
    'obj_ulog_size': {},
    'obj_zones': {},
    'out_err': {},
    'out_err_mt': {},
    'out_err_mt_win': {
        'properties': [ 'windows_only' ],
    },
    'out_err_win': {
        'properties': [ 'windows_only' ],
    },
#     'pmem_deep_persist': {},
    'pmem_eADR_functions': {},
#     'pmem_has_auto_flush': {},
#     'pmem_has_auto_flush_win': {},
    'pmem_include': {},
    'pmem_is_pmem': {},
    'pmem_is_pmem_posix': {},
    'pmem_is_pmem_windows': {
        'properties': [ 'windows_only' ],

    },
#     'pmem_map_file': {},
    'pmem_map_file_trunc': {},
#     'pmem_map_file_win': {},
    'pmem_memcpy': {},
    'pmem_memmove': {},
    'pmem_memset': {},
    'pmem_movnt': {},
    'pmem_movnt_align': {},
    'pmem_unmap': {},
    'pmem_valgr_simple': {},
    'pmem2_api': {},
    'pmem2_badblock': {},
#     'pmem2_badblock_mocks': {},
    'pmem2_compat': {},
    'pmem2_config': {},
#     'pmem2_deep_flush': {},
#     'pmem2_future': {},
#     'pmem2_granularity': {},
    'pmem2_granularity_detection': {
        'properties': [ 'no_sources' ],
    },
    'pmem2_include': {},
    'pmem2_integration': {},
    'pmem2_map': {},
    'pmem2_map_from_existing': {},
    'pmem2_map_prot': {},
    'pmem2_mem_ext': {},
    'pmem2_memcpy': {},
    'pmem2_memmove': {},
    'pmem2_memset': {},
#     'pmem2_mover': {},
    'pmem2_movnt': {},
    'pmem2_movnt_align': {},
    'pmem2_perror': {},
    'pmem2_persist': {},
    'pmem2_persist_valgrind': {},
    'pmem2_source': {},
    'pmem2_source_alignment': {},
    'pmem2_source_numa': {},
    'pmem2_source_size': {},
    'pmem2_usc': {},
    'pmem2_vm_reservation': {},
    'pmemobjcli': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_check': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_create': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_dump': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_feature': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_feature_remote': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_help': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_info': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_info_remote': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_rm': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_rm_remote': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_sync': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_sync_remote': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_transform': {
        'properties': [ 'no_sources' ],
    },
    'pmempool_transform_remote': {
        'properties': [ 'no_sources' ],
    },
    'pmemset_badblock': {},
    'pmemset_config': {},
#     'pmemset_deep_flush': {},
    'pmemset_event': {},
    'pmemset_file': {},
    'pmemset_include': {},
    'pmemset_map_config': {},
    'pmemset_memcpy': {},
    'pmemset_memmove': {},
    'pmemset_memset': {},
    'pmemset_new': {},
    'pmemset_part': {},
    'pmemset_perror': {},
    'pmemset_persist': {},
    'pmemset_sds': {},
    'pmemset_source': {},
    'pmemspoil': {
        'properties': [ 'no_sources' ],
    },
    'pmreorder_flushes': {},
    'pmreorder_simple': {},
    'pmreorder_stack': {},
    'remote_basic': {},
    'remote_obj_basic': {},
    'rpmem_addr': {},
    'rpmem_addr_ext': {},
    'rpmem_basic': {},
    'rpmem_fip': {},
    'rpmem_obc': {},
    'rpmem_obc_int': {},
    'rpmem_proto': {},
    'rpmemd_config': {},
    'rpmemd_db': {},
#     'rpmemd_dbg': {},
    'rpmemd_log': {},
    'rpmemd_obc': {},
    'rpmemd_util': {},
    'scope': {
        'properties': [ 'no_sources', 'windows_only' ],
    },
    'set_funcs': {},
#     'signal_handle': {},
#     'sync-remotes': {},
#     'tools': {},
    'traces': {},
    'traces_custom_function': {},
    'traces_pmem': {},
    'unicode_api': {
        'properties': [ 'no_sources' ],
    },
    'unicode_match_script': {
        'properties': [ 'no_sources' ],
    },
    'util_badblock': {},
    'util_cpuid': {},
    'util_ctl': {},
    'util_extent': {},
    'util_file_create': {},
    'util_file_open': {},
    'util_is_absolute': {},
    'util_is_poolset': {},
    'util_is_zeroed': {},
    'util_map_proc': {},
    'util_parse_size': {},
    'util_pool_hdr': {},
#     'util_poolset': {},
    'util_poolset_foreach': {},
    'util_poolset_parse': {},
    'util_poolset_size': {},
    'util_ravl': {},
    'util_sds': {},
    'util_uuid_generate': {},
    'util_vec': {},
    'util_vecq': {},
#     'win_common': {},
#     'win_lists': {},
#     'win_mmap_dtor': {},
#     'win_poolset_unmap': {},
#     'win_signal': {},
}

unittest_sources = files(
    '../../testsuite/unittest/ut_alloc.c',
    '../../testsuite/unittest/ut_backtrace.c',
    '../../testsuite/unittest/ut_fh.c',
    '../../testsuite/unittest/ut_file.c',
    '../../testsuite/unittest/ut_pthread.c',
    '../../testsuite/unittest/ut_signal.c',
    '../../testsuite/unittest/ut.c',
)

unittest_lib = library(
    'unittest',
    unittest_sources,
    dependencies: [
	pmemcore_dep,
    ],
    include_directories: [
	include_directories('../../testsuite/unittest'),
	root_include,
	core_include,
    ],
    install: false,
)

unittest_dep = declare_dependency(
    link_with: unittest_lib,
    include_directories: [
        include_directories('../../testsuite/unittest'),
        core_include,
        common_include,
        root_include,
    ]
)

unittest_pmem2_sources = files(
    '../../testsuite/unittest/ut_pmem2_config.c',
    '../../testsuite/unittest/ut_pmem2_map.c',
    '../../testsuite/unittest/ut_pmem2_setup_integration.c',
    '../../testsuite/unittest/ut_pmem2_setup.c',
    '../../testsuite/unittest/ut_pmem2_source.c',
    '../../testsuite/unittest/ut_pmem2_utils.c',
    '../libpmem2/config.c',
    '../libpmem2/errormsg.c',
    '../libpmem2/map.c',
    '../libpmem2/map_posix.c',
    '../libpmem2/memops_generic.c',
    '../libpmem2/mover.c',
    '../libpmem2/persist.c',
    '../libpmem2/persist_posix.c',
    '../libpmem2/pmem2_utils.c',
    '../libpmem2/pmem2_utils_linux.c',
    '../libpmem2/pmem2_utils_ndctl.c',
    '../libpmem2/source.c',
    '../libpmem2/source_posix.c',
    '../libpmem2/vm_reservation.c',
    '../libpmem2/vm_reservation_posix.c',
    '../libpmem2/auto_flush_linux.c',
    '../libpmem2/deep_flush_linux.c',
    '../libpmem2/extent_linux.c',
    '../libpmem2/region_namespace_ndctl.c',
)

unittest_pmem2_lib = library(
    'unittest_pmem2',
    unittest_pmem2_sources,
    c_args: [
        '-DPMEM2_USE_MINIASYNC',
    ],
    dependencies: [
	libndctl_dep,
        libdaxctl_dep,
	pmem2arch_dep,
	pmemcore_dep,
	pmemcommon_dep,
        unittest_dep,
    ],
    include_directories: [
        include_directories('../../testsuite/unittest'),
	include_directories('../libpmem2'),
        miniasync_include,
        root_include,
    ],
    install: false,
)

unittest_pmem2_dep = declare_dependency(
    link_with: unittest_pmem2_lib,
    include_directories: [
        include_directories('../../testsuite/unittest'),
    ]
)

unittest_pmemset_sources = files(
    '../../testsuite/unittest/ut_pmemset_utils.c',
)

unittest_pmemset_dep = declare_dependency(
    sources: unittest_pmemset_sources,
    include_directories: [
        include_directories('../../testsuite/unittest'),
    ]
)

filtered_tests = {}

# filter tests based on option dependencies and platform
foreach t, attrs : tests
    option_deps = attrs.get('option_deps', [])

    deps_fulfilled = true
    foreach dep : option_deps
        if not get_option(dep)
            deps_fulfilled = false
            break
        endif
    endforeach

    if not deps_fulfilled
        continue # filter test cases with dependencies on disabled options
    endif

    properties = attrs.get('properties', [])
    if properties.contains('windows_only') and host_machine.system() != 'windows'
        continue # filter 'windows_only' test cases on platforms different than windows
    endif

    filtered_tests += {t: attrs}
endforeach

# script for copying files from the source dir to the meson build dir
copy = find_program('../../utils/copy.py')

test_files_prefixes = [ 'TEST' ] # e.g. TESTS.py, TEST0, TEST0.PS1
test_files_suffixes = [ '.match' ] # eg. out0.log.match, err0.log.match

foreach t, attrs : filtered_tests
    test_deps = attrs.get('test_deps', [])

    test_deps_fulfilled = true
    foreach test : test_deps
        if not filtered_tests.has_key(test)
            test_deps_fulfilled = false
        endif
    endforeach

    if not test_deps_fulfilled
        continue # skip test cases with dependencies on test executables that were filtered out
    endif

    # copy test files to the meson build dir
    ret = run_command(
        copy,
        t, # dir name in the source test directory
        t, # dir name in the build test directory
        test_files_prefixes,
        test_files_suffixes,
        check: true,
    )

    properties = attrs.get('properties', [])
    if properties.contains('no_sources')
        continue # do not subdir test cases with no source files
    endif

    subdir(t)
endforeach
