executable('full_copy', 'full_copy.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: root_include)
executable('manpage', 'manpage.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: root_include)
executable('simple_copy', 'simple_copy.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: root_include)
