executable(
    'full_copy',
    'full_copy.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: include_directories('.'),
)

executable(
    'manpage',
    'manpage.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: include_directories('.'),
)

executable(
    'simple_copy',
    'simple_copy.c',
    dependencies: [threads_dep, libpmem_dep],
    include_directories: include_directories('.'),
)
